kubernetes/apps/ingress-system/internal-proxy/resources/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.kubernetes.io/target: ipv4.milton.mcf.io
    gatus.home-operations.com/endpoint: |-
      group: internal
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-proxy-config
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      protocol: HTTP
      port: 80
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - kind: Secret
            name: milton-mcf-io-cert-tls
